--- a/Project_US_EV_Population.ipynb
+++ b/Project_US_EV_Population.ipynb
@@ -19,9 +19,8 @@
         "id": "53b1811e-c454-47ce-bd78-5fd65e8da0e2"
       },
       "source": [
-        "Author 1: Lehmoudi Kamel, up202301437\n",
-        "Author 2: Name, UP number\n",
-        "Author 3: Name, UP number"
+        "Author 1: Kamel Lehmoudi, up202301437 <br>\n",
+        "Author 2: Moraless Philius, up202302762"
       ]
     },
     {
@@ -54,6 +53,301 @@
         "Charging Station Placement Optimization:\n",
         "\n",
         "Objective: Predict the demand for electric vehicle charging stations in different locations based on factors such as city, state, and postal code.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f67c67aa",
+      "metadata": {},
+      "source": [
+        "## Library"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "id": "673fc5a6",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import OneHotEncoder, LabelEncoder"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "791fa595",
+      "metadata": {},
+      "source": [
+        "# Preprocessing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 54,
+      "id": "0484ebfe",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = pd.read_csv(\"Data/Electric_Vehicle_Population_Data.csv\", delimiter=\";\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "id": "4a26c721",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>VIN (1-10)</th>\n",
+              "      <th>County</th>\n",
+              "      <th>City</th>\n",
+              "      <th>State</th>\n",
+              "      <th>Postal Code</th>\n",
+              "      <th>Model Year</th>\n",
+              "      <th>Make</th>\n",
+              "      <th>Model</th>\n",
+              "      <th>Electric Vehicle Type</th>\n",
+              "      <th>Clean Alternative Fuel Vehicle (CAFV) Eligibility</th>\n",
+              "      <th>Electric Range</th>\n",
+              "      <th>Base MSRP</th>\n",
+              "      <th>Legislative District</th>\n",
+              "      <th>DOL Vehicle ID</th>\n",
+              "      <th>Vehicle Location</th>\n",
+              "      <th>Electric Utility</th>\n",
+              "      <th>2020 Census Tract</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>KM8K33AGXL</td>\n",
+              "      <td>King</td>\n",
+              "      <td>Seattle</td>\n",
+              "      <td>WA</td>\n",
+              "      <td>98103</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>HYUNDAI</td>\n",
+              "      <td>KONA</td>\n",
+              "      <td>Battery Electric Vehicle (BEV)</td>\n",
+              "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
+              "      <td>258</td>\n",
+              "      <td>0</td>\n",
+              "      <td>43</td>\n",
+              "      <td>249675142</td>\n",
+              "      <td>POINT (-122.34301 47.659185)</td>\n",
+              "      <td>CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)</td>\n",
+              "      <td>53033004800</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1C4RJYB61N</td>\n",
+              "      <td>King</td>\n",
+              "      <td>Bothell</td>\n",
+              "      <td>WA</td>\n",
+              "      <td>98011</td>\n",
+              "      <td>2022</td>\n",
+              "      <td>JEEP</td>\n",
+              "      <td>GRAND CHEROKEE</td>\n",
+              "      <td>Plug-in Hybrid Electric Vehicle (PHEV)</td>\n",
+              "      <td>Not eligible due to low battery range</td>\n",
+              "      <td>25</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>233928502</td>\n",
+              "      <td>POINT (-122.20578 47.762405)</td>\n",
+              "      <td>PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)</td>\n",
+              "      <td>53033021804</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1C4RJYD61P</td>\n",
+              "      <td>Yakima</td>\n",
+              "      <td>Yakima</td>\n",
+              "      <td>WA</td>\n",
+              "      <td>98908</td>\n",
+              "      <td>2023</td>\n",
+              "      <td>JEEP</td>\n",
+              "      <td>GRAND CHEROKEE</td>\n",
+              "      <td>Plug-in Hybrid Electric Vehicle (PHEV)</td>\n",
+              "      <td>Not eligible due to low battery range</td>\n",
+              "      <td>25</td>\n",
+              "      <td>0</td>\n",
+              "      <td>14</td>\n",
+              "      <td>229675939</td>\n",
+              "      <td>POINT (-120.6027202 46.5965625)</td>\n",
+              "      <td>PACIFICORP</td>\n",
+              "      <td>53077002900</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   VIN (1-10)  County     City State  Postal Code  Model Year     Make  \\\n",
+              "0  KM8K33AGXL    King  Seattle    WA        98103        2020  HYUNDAI   \n",
+              "1  1C4RJYB61N    King  Bothell    WA        98011        2022     JEEP   \n",
+              "2  1C4RJYD61P  Yakima   Yakima    WA        98908        2023     JEEP   \n",
+              "\n",
+              "            Model                   Electric Vehicle Type  \\\n",
+              "0            KONA          Battery Electric Vehicle (BEV)   \n",
+              "1  GRAND CHEROKEE  Plug-in Hybrid Electric Vehicle (PHEV)   \n",
+              "2  GRAND CHEROKEE  Plug-in Hybrid Electric Vehicle (PHEV)   \n",
+              "\n",
+              "  Clean Alternative Fuel Vehicle (CAFV) Eligibility  Electric Range  \\\n",
+              "0           Clean Alternative Fuel Vehicle Eligible             258   \n",
+              "1             Not eligible due to low battery range              25   \n",
+              "2             Not eligible due to low battery range              25   \n",
+              "\n",
+              "   Base MSRP  Legislative District  DOL Vehicle ID  \\\n",
+              "0          0                    43       249675142   \n",
+              "1          0                     1       233928502   \n",
+              "2          0                    14       229675939   \n",
+              "\n",
+              "                  Vehicle Location  \\\n",
+              "0     POINT (-122.34301 47.659185)   \n",
+              "1     POINT (-122.20578 47.762405)   \n",
+              "2  POINT (-120.6027202 46.5965625)   \n",
+              "\n",
+              "                                Electric Utility  2020 Census Tract  \n",
+              "0   CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)        53033004800  \n",
+              "1  PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)        53033021804  \n",
+              "2                                     PACIFICORP        53077002900  "
+            ]
+          },
+          "execution_count": 55,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.head(3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "id": "a63cd510",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1999 entries, 0 to 1998\n",
+            "Data columns (total 17 columns):\n",
+            " #   Column                                             Non-Null Count  Dtype \n",
+            "---  ------                                             --------------  ----- \n",
+            " 0   VIN (1-10)                                         1999 non-null   object\n",
+            " 1   County                                             1999 non-null   object\n",
+            " 2   City                                               1999 non-null   object\n",
+            " 3   State                                              1999 non-null   object\n",
+            " 4   Postal Code                                        1999 non-null   int64 \n",
+            " 5   Model Year                                         1999 non-null   int64 \n",
+            " 6   Make                                               1999 non-null   object\n",
+            " 7   Model                                              1999 non-null   object\n",
+            " 8   Electric Vehicle Type                              1999 non-null   object\n",
+            " 9   Clean Alternative Fuel Vehicle (CAFV) Eligibility  1999 non-null   object\n",
+            " 10  Electric Range                                     1999 non-null   int64 \n",
+            " 11  Base MSRP                                          1999 non-null   int64 \n",
+            " 12  Legislative District                               1999 non-null   int64 \n",
+            " 13  DOL Vehicle ID                                     1999 non-null   int64 \n",
+            " 14  Vehicle Location                                   1999 non-null   object\n",
+            " 15  Electric Utility                                   1999 non-null   object\n",
+            " 16  2020 Census Tract                                  1999 non-null   int64 \n",
+            "dtypes: int64(7), object(10)\n",
+            "memory usage: 265.6+ KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "id": "176b2eff",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "VIN (1-10)                                           0\n",
+              "County                                               0\n",
+              "City                                                 0\n",
+              "State                                                0\n",
+              "Postal Code                                          0\n",
+              "Model Year                                           0\n",
+              "Make                                                 0\n",
+              "Model                                                0\n",
+              "Electric Vehicle Type                                0\n",
+              "Clean Alternative Fuel Vehicle (CAFV) Eligibility    0\n",
+              "Electric Range                                       0\n",
+              "Base MSRP                                            0\n",
+              "Legislative District                                 0\n",
+              "DOL Vehicle ID                                       0\n",
+              "Vehicle Location                                     0\n",
+              "Electric Utility                                     0\n",
+              "2020 Census Tract                                    0\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "id": "8bffc8ff",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "shape of the training data set : (1499, 17)\n",
+            "shape of the test data set : (500, 17)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# DO NOT RUN \n",
+        "train_df, test_df = train_test_split(df, test_size=0.25, random_state=42)\n",
+        "train_df.to_csv(\"Data/train_dataset.csv\", index=False)\n",
+        "test_df.to_csv(\"Data/test_dataset.csv\", index=False)\n",
+        "print(f\"shape of the training data set : {train_df.shape}\")\n",
+        "print(f\"shape of the test data set : {test_df.shape}\")"
       ]
     },
     {
@@ -102,8 +396,7 @@
         "# Combine extracted features into a feature matrix\n",
         "features = np.column_stack((city, state, postal_code, electric_range))\n",
         "print(\"features\")\n",
-        "print(features)\n",
-        "\n"
+        "print(features)"
       ]
     },
     {
