modified:   Project_US_EV_Population.ipynb modified:   Project_US_EV_Populationv3.ipynb

--- a/Project_US_EV_Populationv3.ipynb
+++ b/Project_US_EV_Populationv3.ipynb
@@ -351,6 +351,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10e06969",
+   "metadata": {},
+   "source": [
+    "# Processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "NE2wKABain8O",
@@ -406,8 +414,7 @@
     "id": "chhRFfop9ly1"
    },
    "source": [
-    "\n",
-    "-Predictive Model for Electric Range:\n",
+    "### Predictive Model for Electric Range\n",
     " Objective: Build a model to predict the electric range of vehicles based on features like model year, brand, and electric vehicle type.\n",
     ":\n"
    ]
@@ -549,41 +556,6 @@
    "source": [
     "-Electric Vehicle Adoption Prediction:\n",
     "Objective: Use historical data to predict the future adoption and growth of electric vehicles in different states or counties.*italicised text*\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "XTyK_1ec91VT",
-   "metadata": {
-    "id": "XTyK_1ec91VT"
-   },
-   "source": [
-    "-Geospatial Analysis of Electric Vehicle Distribution:  \n",
-    "Objective: Visualize and analyze the geographic distribution of electric vehicles across different counties or cities."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "vBtgPBO6-HTx",
-   "metadata": {
-    "id": "vBtgPBO6-HTx"
-   },
-   "source": [
-    "-Price Prediction Model:\n",
-    " Objective: Predict the base MSRP of electric vehicles based on features like brand, model, and model year.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "zrzvY-s6-Hld",
-   "metadata": {
-    "id": "zrzvY-s6-Hld"
-   },
-   "source": [
-    "-Customer Segmentation for Electric Vehicles:\n",
-    "Objective: Segment electric vehicle customers based on demographic features to tailor marketing strategies and services.\n",
-    "we can use the model year,the range, type of vehicule,make (brand) ,"
    ]
   },
   {
@@ -1127,6 +1099,16 @@
     "for example: Instrument Calibration is a systematic error)\n",
     "\n",
     "Here in our case this Systematic error may arise due to a consistent error in data collection, such as underreporting or overreporting certain values across the dataset.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0c78190",
+   "metadata": {},
+   "source": [
+    "### Customer Segmentation for Electric Vehicles\n",
+    "Objective: Segment electric vehicle customers based on demographic features to tailor marketing strategies and services.\n",
+    "we can use the model year,the range, type of vehicule,make (brand) ,"
    ]
   }
  ],
